src/interfaces/ecpg/test/sql/sqljson_jsontable.pgc
#include <stdio.h>

EXEC SQL INCLUDE sqlca;
exec sql include ../regression;

EXEC SQL WHENEVER SQLERROR sqlprint;

int
main ()
{
  ECPGdebug (1, stderr);

  EXEC SQL CONNECT TO REGRESSDB1;
  EXEC SQL SET AUTOCOMMIT = ON;

  EXEC SQL SELECT * FROM JSON_TABLE(jsonb 'null', '$[*]' AS p0
	COLUMNS (
			foo int,
			bar int,
			baz int
	)) jt;
  // error

  EXEC SQL DISCONNECT;

  return 0;
}
